Add special handling needed for OLO10 relocations. First part of fixing PR port-sparc64/46724.